--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ cache:
     - $HOME/.cache/pip
     - $HOME/.cache/matplotlib
 
+addons:
+  apt:
+    packages:
+      - qtbase5-dev
 matrix:
   fast_finish: true
   include:
