--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ matrix:
     - os: linux
       python: 3.7
       sudo: true
-i   - os: osx
+    - os: osx
       language: generic
       env: PYTHON=3.5
     - os: osx
