--- a/.travis.yml
+++ b/.travis.yml
@@ -45,10 +45,14 @@ matrix:
       env: PYTHON=3.7
 
 before_install:
-  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
-  - "export DISPLAY=:99.0"
+  - |
+    if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+        "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+        "export DISPLAY=:99.0"
+    fi
   - |
     if [ "$TRAVIS_OS_NAME" == "osx" ]; then
+        sudo Xvfb :99 -ac -screen 0 1280x1024x16 &
         pushd ${HOME}
         wget https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh && \
         bash Miniconda3-latest-MacOSX-x86_64.sh -b -p ${HOME}/conda && \
