--- a/.travis.yml
+++ b/.travis.yml
@@ -47,8 +47,8 @@ matrix:
 before_install:
   - |
     if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-        "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
-        "export DISPLAY=:99.0"
+        /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16
+        export DISPLAY=:99.0
     fi
   - |
     if [ "$TRAVIS_OS_NAME" == "osx" ]; then
